all-in-k8s/manifests/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: instana-kafka
---
apiVersion: v1
kind: Namespace
metadata:
  name: instana-elasticsearch
---
apiVersion: v1
kind: Namespace
metadata:
  name: instana-postgres
---
apiVersion: v1
kind: Namespace
metadata:
  name: instana-cassandra
---
apiVersion: v1
kind: Namespace
metadata:
  name: instana-clickhouse

---
apiVersion: v1
kind: Namespace
metadata:
  name: instana-beeinstana

---
apiVersion: v1
kind: Namespace
metadata:
  name: instana-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: instana-core
---
apiVersion: v1
kind: Namespace
metadata:
  name: instana-units
